<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/background">

    <include
        layout="@layout/toolbar"
        android:id="@+id/toolBar">
    </include>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100sp">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout1"
                android:layout_width="match_parent"
                android:layout_height="80sp"
                android:padding="10sp"
                android:theme="@style/editText">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/planTitle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/enterTheTitle"
                    android:theme="@style/editText" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout2"
                android:layout_width="match_parent"
                android:layout_height="120sp"
                android:ems="10"
                android:gravity="top"
                android:padding="10sp"
                android:theme="@style/editText">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/planDescription"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:gravity="top"
                    android:hint="@string/enterADescription" />
            </com.google.android.material.textfield.TextInputLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="30sp" />

            <Button
                android:id="@+id/getDate"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginStart="30sp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/long_buttons"
                android:gravity="center_vertical"
                android:text="@string/chooseDate"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textSize="20sp"
                android:theme="@style/supportBackground"
                tools:ignore="RtlCompat,RtlSymmetry" />

            <TextView
                android:id="@+id/showDate"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAlignment="center"
                android:textSize="20sp"
                android:padding="5sp"/>

            <Button
                android:id="@+id/getTime"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginStart="30sp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/long_buttons"
                android:gravity="center_vertical"
                android:text="@string/chooseTime"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textSize="20sp"
                android:theme="@style/supportBackground"
                tools:ignore="RtlCompat,RtlSymmetry" />

            <TextView
                android:id="@+id/showTime"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAlignment="center"
                android:textSize="20sp"
                android:padding="5sp"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="20sp" />

            <Button
                android:id="@+id/addPlanExecute"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="10sp"
                android:background="@drawable/long_buttons"
                android:text="@string/accept"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:theme="@style/supportBackground"
                android:gravity="center"
                android:layout_gravity="bottom"/>
            <Space
                android:layout_width="match_parent"
                android:layout_height="30sp" />
        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>